--- a/index.html
+++ b/index.html
@@ -4,7 +4,168 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Asztalos Munkák</title>
+    <title>Klaudiusz | Bútorasztalos Munkák</title>
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/basic.css" />
+    <link rel="stylesheet" href="./styles/header.css" />
+    <link rel="stylesheet" href="./styles/home.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a class="header-logo" href="#home">Klaudiusz</a>
+
+      <nav class="home-nav">
+        <ul>
+          <li><a href="#home">Főoldal</a></li>
+          <li><a href="#about">Rólam</a></li>
+          <li><a href="#portfolio">Referenciák</a></li>
+          <li><a href="#contact">Kapcsolat</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <!--    --FŐOLDAL--     -->
+      <section id="home" class="home">
+        <div class="home-main">
+          <div class="main-container">
+            <h1>A jó dolgok kézzel készülnek</h1>
+            <div>
+              <a>Kapcsolat</a>
+              <a>Referencia</a>
+            </div>
+          </div>
+        </div>
+        <div class="home-container">
+          <h2>Bútorasztalos munkák</h2>
+        </div>
+      </section>
+      <!--    --RÓLAm--     -->
+      <section id="about">Rólam</section>
+      <!--    --REFERENCIÁK--     -->
+      <section id="portfolio">Referenciák</section>
+      <!--    --KAPCSOLAT--     -->
+      <section id="contact">
+        Kapcsolat
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+          aut praesentium autem quasi officia consequatur, reprehenderit error
+          necessitatibus. Consectetur provident, incidunt, alias quod ipsam
+          dicta quis vitae hic voluptatem animi ullam architecto consequuntur
+          eius inventore soluta harum eveniet delectus! Dignissimos nam
+          reprehenderit consequatur corrupti dolores aspernatur nesciunt fugit
+          dolor quos cumque tempora quidem quod amet, error adipisci commodi
+          doloremque ratione, possimus, praesentium nemo! Placeat, consequuntur
+          ipsam. In neque beatae totam odio quibusdam? Velit dignissimos
+          quisquam esse possimus omnis nihil, quas veritatis libero ad, sequi,
+          assumenda repudiandae nostrum. Maxime voluptatem mollitia a nostrum
+          eius ut officia nulla vero laboriosam, recusandae excepturi! Rerum,
+          beatae? Veritatis, dolorem voluptate minima provident consequatur,
+          odio odit explicabo itaque, molestias recusandae accusamus qui quam
+          aliquid! Autem, odio! Modi saepe eveniet nihil eligendi! Animi, minima
+          a reiciendis dolorem nostrum temporibus assumenda voluptates impedit
+          iure, consequuntur quaerat consequatur, illum quam quae. Quos
+          necessitatibus, corporis vitae cumque non similique, voluptatem ipsam
+          debitis culpa provident sit autem officiis quas aspernatur fuga
+          exercitationem hic ipsum? Veritatis, accusantium iusto maxime quas,
+          cum excepturi obcaecati sunt earum fugit placeat labore delectus sint
+          magni! Nesciunt autem veritatis inventore voluptas quibusdam eligendi
+          quas, repellat, alias placeat vitae iste? Veritatis omnis voluptates
+          nisi delectus quos quae provident laudantium ratione eveniet
+          blanditiis id quisquam quidem praesentium recusandae, eaque
+          consequatur nam nemo animi voluptas accusamus, dolores veniam,
+          inventore consequuntur! Animi numquam at asperiores necessitatibus
+          aliquam sequi pariatur nam eius aperiam expedita maiores ad laudantium
+          modi iure vitae explicabo ipsum, veniam temporibus ipsam cumque
+          doloribus iste optio est accusamus? Enim commodi eveniet sit amet
+          sequi possimus? Fugit ab iure quidem dignissimos ipsa autem maiores
+          accusantium quaerat velit mollitia voluptates doloremque veritatis
+          animi reprehenderit, eius fugiat, sed commodi illum! Similique porro,
+          dolore beatae ab sapiente quae fugiat magnam, fugit esse laboriosam
+          deleniti nihil dolorum iusto enim eos eaque quod! Soluta sapiente
+          iusto non, cum expedita ad quod alias quis sint consequuntur eum rem
+          ipsa repellendus pariatur eaque minima quia. Odio, itaque voluptate
+          obcaecati cupiditate sapiente provident minima autem omnis ex error,
+          quo quasi numquam optio repudiandae tempora vel reprehenderit. Aut
+          nostrum explicabo officia similique atque? Ratione repellendus quasi
+          aperiam tempora aliquid eaque ea delectus nobis, labore totam ipsam
+          sequi tempore, sit explicabo, esse tenetur accusamus earum! Corporis
+          expedita consequuntur quasi. Mollitia inventore nam saepe neque ea
+          laborum, placeat quidem modi blanditiis unde quam hic aliquid odio
+          dolores molestias obcaecati suscipit incidunt! Recusandae repellendus
+          dolore est dolor provident quae dignissimos, blanditiis neque eos
+          debitis nemo, dicta iste amet ullam iusto mollitia. Ab et, unde
+          consectetur suscipit veritatis pariatur necessitatibus quod nam
+          recusandae quaerat quis esse eos similique itaque doloremque, amet
+          nemo odit! Repudiandae ut debitis illo accusamus minima, libero,
+          recusandae iste alias nesciunt molestiae quia. Ipsum laboriosam
+          commodi impedit ullam placeat maiores consequuntur ea quasi ducimus
+          sint? Magnam, modi debitis aperiam beatae eaque enim ipsam libero ad
+          repellat nulla, molestiae sequi pariatur consectetur. Commodi optio
+          iure nihil maiores possimus praesentium blanditiis, nisi quibusdam
+          dolore non asperiores, sunt repellat ea molestias odio doloribus
+          molestiae pariatur labore iste reiciendis dolorem sint minus fuga.
+          Explicabo dolor excepturi repellat quod natus numquam voluptatem aut
+          sit veritatis, nihil, modi quibusdam earum ea ullam sequi quos nam
+          delectus itaque, quia voluptatibus. Quisquam culpa aperiam error
+          quibusdam blanditiis? Neque rem dolor animi quos nemo reprehenderit
+          veniam ratione quidem quo impedit doloribus, non fugit, amet,
+          aspernatur similique doloremque odit voluptas repellat obcaecati hic
+          nobis? Illo quo distinctio, maiores magni vitae recusandae esse
+          delectus est consequuntur rerum ab suscipit dolores quam molestias rem
+          mollitia facilis saepe placeat quod debitis quae architecto asperiores
+          molestiae! Laudantium eos nulla earum aut molestiae porro, sunt,
+          fugiat minima quidem rerum voluptate et ducimus tenetur. Iure enim,
+          vitae tempore atque sunt, sequi iusto corporis reiciendis quisquam
+          impedit est dicta fugit natus itaque ducimus quod? Debitis aut minima
+          quae quidem nobis soluta, impedit laborum amet ea reiciendis eligendi
+          totam quia, officia doloremque fugiat. Exercitationem fugiat dolorem
+          expedita! Ipsa debitis velit ut iste nisi similique nesciunt
+          assumenda, mollitia saepe laboriosam inventore praesentium dolorum
+          impedit dicta, itaque veritatis facere quas et obcaecati. Cum, qui.
+          Ipsam quidem dolor, eveniet inventore quas ipsa nihil magnam sunt,
+          beatae sed ut eos at hic? Doloremque sit et modi similique mollitia
+          est ut velit aliquam odit architecto quam quas obcaecati autem,
+          sapiente accusamus commodi repudiandae sed sint cum porro totam
+          dolore? Mollitia sequi similique exercitationem commodi quaerat? Iure
+          ipsa deleniti fugiat accusantium magni blanditiis totam omnis vitae
+          mollitia, beatae ea numquam, consectetur autem laboriosam. Dicta
+          assumenda laudantium deserunt accusamus tempore dolores magnam
+          nesciunt pariatur suscipit, beatae ad quod debitis sapiente facere
+          optio? Fugit, quibusdam. Fugit repellendus accusantium asperiores
+          rerum qui harum autem necessitatibus ea aliquam debitis. Maiores
+          suscipit sit fugiat consequuntur voluptas voluptate, mollitia quasi ab
+          voluptates repudiandae quos perferendis, cumque, itaque repellendus
+          recusandae et deserunt ratione odio unde consequatur in dignissimos?
+          Architecto ea voluptates cupiditate eos nihil? Laboriosam odio atque,
+          tempora in iusto sunt similique veritatis temporibus at ipsum
+          inventore, obcaecati possimus accusantium illum maiores dolorem
+          impedit deserunt ea voluptatem itaque rerum. Error illo praesentium
+          minima quibusdam unde voluptates nostrum repudiandae officiis,
+          doloribus, amet quos dignissimos reiciendis veniam officia inventore
+          ducimus. Accusantium nobis ullam tempore iure facilis similique cum in
+          id, est sint explicabo commodi dicta saepe temporibus consectetur.
+          Consectetur ratione ipsam unde tenetur corporis sunt earum eligendi
+          explicabo at voluptate beatae ducimus dolores molestiae odit fuga
+          fugiat minus saepe, libero vero rem quis odio placeat sed. Earum
+          perferendis nemo velit, cumque vel, ut adipisci minus, quisquam quod
+          eius sunt aperiam? Harum quisquam fugit laboriosam, nemo facere optio
+          veniam, recusandae animi consequuntur culpa enim? Libero dignissimos
+          distinctio quos. Adipisci eligendi dolore dignissimos illum soluta,
+          deleniti nostrum, velit vero maxime obcaecati aspernatur voluptatem,
+          dolor unde fugiat at ipsam iste? Sapiente, repellendus perspiciatis
+          laboriosam omnis ex unde minus saepe maxime aspernatur amet blanditiis
+          distinctio reprehenderit nobis deserunt. Modi accusamus incidunt
+          doloremque qui asperiores placeat, est minus alias totam ex officiis
+          iusto natus mollitia nihil ipsa numquam deleniti voluptatibus
+          temporibus, quam voluptatem! Voluptatum, id architecto! Inventore
+          mollitia minima, officiis dolorem id ut nam aliquam maiores nemo iusto
+          est ipsa sunt laudantium voluptatum voluptas saepe? Est, dignissimos
+          ea?
+        </p>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
