Created about section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./styles/basic.css" />
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="./styles/about.css" />
+    <link rel="stylesheet" href="./styles/portfolio.css" />
+    <link rel="stylesheet" href="./styles/contact.css" />
   </head>
   <body>
     <header>
@@ -41,7 +44,26 @@
         </div>
       </section>
       <!--    --RÓLAm--     -->
-      <section id="about">Rólam</section>
+      <section id="about" class="about">
+        <div class="description">
+          <h2>Klaudiusz Bútor</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio
+            sequi, dolores magni maxime odit blanditiis laborum dolorem
+            excepturi neque facilis, qui, ipsam natus. Nam non nulla deserunt
+            minus eveniet ex ipsa officia beatae, error accusamus? Cum, nostrum
+            voluptatum ipsum enim laboriosam expedita iure ab amet quia porro
+            dicta est ut autem illo reiciendis nesciunt eaque nam reprehenderit
+            mollitia dolor voluptas! Quisquam numquam accusamus autem debitis?
+            Porro illo quam esse maiores voluptate tempore est, quisquam saepe,
+            maxime iusto magni adipisci fugiat! Debitis deleniti praesentium
+            accusamus inventore temporibus. Nam, nesciunt provident? Omnis
+            quidem minima autem
+          </p>
+          <a href="#contact">Kapcsolat</a>
+        </div>
+        <div class="about-image">x</div>
+      </section>
       <!--    --REFERENCIÁK--     -->
       <section id="portfolio">Referenciák</section>
       <!--    --KAPCSOLAT--     -->
